--- a/reactproject/src/App.css
+++ b/reactproject/src/App.css
@@ -131,7 +131,7 @@ a:not([href]):hover {
   padding: 6rem 0;
   background: #27221f;
   color: white;
-  margin: 20px;
+  margin: 50px 20px;
 }
 .page-section .page-section-heading {
   font-size: 2.25rem;
@@ -288,7 +288,7 @@ a:not([href]):hover {
 .banner-text {
   background-color: black;
   opacity: 0.8;
-  width: 75%;
+  width: 86%;
   margin: auto;
   border-radius: 10px;
 }
